[gd_scene load_steps=6 format=3 uid="uid://ccmgk888h7lfd"]

[ext_resource type="Texture2D" uid="uid://ko00ngfqcxcf" path="res://art/UI/box.png" id="1_6vw1l"]
[ext_resource type="Script" path="res://scripts/pause.gd" id="1_8lwg6"]
[ext_resource type="FontFile" uid="uid://brxyk3yvewsvc" path="res://art/font1.ttf" id="2_81qx5"]
[ext_resource type="AudioStream" uid="uid://ddf1ft02lscru" path="res://art/Sounds/buttonPressed.wav" id="4_rm3lg"]
[ext_resource type="AudioStream" uid="uid://blwgash7dkwka" path="res://art/Sounds/buttonScrolling.wav" id="5_kcjis"]

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8lwg6")

[node name="Resume" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 430.0
offset_top = 66.0
offset_right = 1702.0
offset_bottom = 772.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_6vw1l")

[node name="Label" type="Label" parent="Resume"]
layout_mode = 0
offset_left = 224.0
offset_top = 228.0
offset_right = 440.0
offset_bottom = 287.0
scale = Vector2(4, 4)
theme_override_fonts/font = ExtResource("2_81qx5")
theme_override_font_sizes/font_size = 64
text = "Riprendi"

[node name="Replay" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 430.0
offset_top = 213.0
offset_right = 1702.0
offset_bottom = 919.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_6vw1l")

[node name="Label" type="Label" parent="Replay"]
layout_mode = 0
offset_left = 288.0
offset_top = 224.0
offset_right = 472.0
offset_bottom = 283.0
scale = Vector2(4, 4)
theme_override_fonts/font = ExtResource("2_81qx5")
theme_override_font_sizes/font_size = 64
text = "Rigioca"

[node name="Quit" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 430.0
offset_top = 364.0
offset_right = 1702.0
offset_bottom = 1070.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_6vw1l")

[node name="Label" type="Label" parent="Quit"]
layout_mode = 0
offset_left = 440.0
offset_top = 224.0
offset_right = 624.0
offset_bottom = 283.0
scale = Vector2(4, 4)
theme_override_fonts/font = ExtResource("2_81qx5")
theme_override_font_sizes/font_size = 64
text = "Esci
"

[node name="Pressed" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("4_rm3lg")

[node name="Selected" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("5_kcjis")

[connection signal="mouse_entered" from="Resume" to="." method="_on_resume_mouse_entered"]
[connection signal="mouse_exited" from="Resume" to="." method="_on_resume_mouse_exited"]
[connection signal="mouse_entered" from="Replay" to="." method="_on_replay_mouse_entered"]
[connection signal="mouse_exited" from="Replay" to="." method="_on_replay_mouse_exited"]
[connection signal="mouse_entered" from="Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="Quit" to="." method="_on_quit_mouse_exited"]
